# advent-of-time

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
data/dictionaries/: README.md
locales/: en.toml  fr.toml
scripts/: register-pictures.sh  resize-images.sh
src/: config.rs  database.rs  http_helpers.rs  main.rs  oauth2.rs  routes.rs  security.rs  utils.rs
src/assets/: 404_phrases.md
src/controllers/: auth.rs  day.rs  guess.rs  leaderboard.rs  mod.rs  profile.rs
src/database/: mod.rs  picture_meta_repository.rs  user_repository.rs
src/models/: aot_image_meta.rs  discord_user_response.rs  github_user_response.rs  microsoft_user_response.rs  mod.rs  oauth2_response.rs  oauth_user_info_handler.rs  picture.rs  user.rs
src/scripts/: day.js  index.js  leaderboard.js
src/styles/: about.css  day.css  home.css  leaderboard.css  main.css  profile.css
src/views/: 404.hbs  404.html  about.html  about_fr.html  day.hbs  day.html  index.hbs  index.html  leaderboard.hbs  leaderboard.html  login.hbs  login.html  oauth2_error.hbs  profile.hbs  profile.html
